<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColorVentax"
    android:orientation="vertical"
    tools:context=".Fragment.Settings.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameFragmentTextView"
                android:drawableStart="@drawable/ic_baseline_vertical_split_24"
                android:drawablePadding="5dp"
                android:text="@string/configuraciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColor="@color/blackColorVentax"
                android:textSize="27sp"
                android:textStyle="bold" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/style_dialog_information"
                android:orientation="vertical"
                android:padding="8dp">

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/blackColorVentax"
                    android:id="@+id/designButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:elevation="15dp"
                    android:fontFamily="monospace"
                    android:letterSpacing="0.2"
                    android:text="@string/diseño"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/blackColorVentax"
                    android:id="@+id/socialMediaButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="monospace"
                    android:letterSpacing="0.2"
                    android:text="@string/redes_sociales_"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/blackColorVentax"
                    android:id="@+id/scheduleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="monospace"
                    android:letterSpacing="0.2"
                    android:text="@string/horarios"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <Button
                    android:padding="5dp"
                    android:id="@+id/saveAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/style_popup"
                    android:fontFamily="monospace"
                    android:letterSpacing="0.2"
                    android:text="@string/guardar_todo"
                    android:textAlignment="center"
                    android:textColor="@color/blackColorVentax"
                    android:textSize="15sp"
                    android:textStyle="italic|bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/showSettingsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>